--- a/projects/tester/tester.vcxproj.filters
+++ b/projects/tester/tester.vcxproj.filters
@@ -7,14 +7,14 @@
     <Filter Include="Graphics">
       <UniqueIdentifier>{1653CE33-0220-293F-2B39-17E717655ECD}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Utilities">
-      <UniqueIdentifier>{010A8043-6D74-34BA-B6B2-E55F225C120F}</UniqueIdentifier>
-    </Filter>
     <Filter Include="entt">
       <UniqueIdentifier>{2055967C-0C8C-970D-B578-7D10A18E130F}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AudioEngine.h" />
+    <ClInclude Include="src\Bullet.h" />
+    <ClInclude Include="src\Enemy.h" />
     <ClInclude Include="src\Gameplay\Camera.h">
       <Filter>Gameplay</Filter>
     </ClInclude>
@@ -24,10 +24,22 @@
     <ClInclude Include="src\Graphics\IBuffer.h">
       <Filter>Graphics</Filter>
     </ClInclude>
+    <ClInclude Include="src\Graphics\ITexture.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
     <ClInclude Include="src\Graphics\IndexBuffer.h">
       <Filter>Graphics</Filter>
     </ClInclude>
+    <ClInclude Include="src\Graphics\MeshBuilder.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Graphics\ObjLoader.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
     <ClInclude Include="src\Graphics\Shader.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Graphics\StringUtils.h">
       <Filter>Graphics</Filter>
     </ClInclude>
     <ClInclude Include="src\Graphics\Texture2D.h">
@@ -45,29 +57,21 @@
     <ClInclude Include="src\Graphics\VertexBuffer.h">
       <Filter>Graphics</Filter>
     </ClInclude>
+    <ClInclude Include="src\Graphics\VertexTypes.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HitCheck.h" />
+    <ClInclude Include="src\Player.h" />
+    <ClInclude Include="src\UI.h" />
     <ClInclude Include="src\entt\entt.hpp">
       <Filter>entt</Filter>
     </ClInclude>
-    <ClInclude Include="src\Graphics\MeshBuilder.h">
-      <Filter>Utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Graphics\ObjLoader.h">
-      <Filter>Utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Graphics\StringUtils.h" />
-    <ClInclude Include="src\Graphics\VertexTypes.h">
-      <Filter>Utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Player.h" />
-    <ClInclude Include="src\Enemy.h" />
-    <ClInclude Include="src\Graphics\ITexture.h" />
-    <ClInclude Include="src\Bullet.h" />
-    <ClInclude Include="src\HitCheck.h" />
     <ClInclude Include="src\stuff.h" />
-    <ClInclude Include="src\UI.h" />
-    <ClInclude Include="src\AudioEngine.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\AudioEngine.cpp" />
+    <ClCompile Include="src\Bullet.cpp" />
+    <ClCompile Include="src\Enemy.cpp" />
     <ClCompile Include="src\Gameplay\Camera.cpp">
       <Filter>Gameplay</Filter>
     </ClCompile>
@@ -75,6 +79,12 @@
       <Filter>Gameplay</Filter>
     </ClCompile>
     <ClCompile Include="src\Graphics\IBuffer.cpp">
+      <Filter>Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Graphics\ITexture.cpp">
+      <Filter>Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Graphics\ObjLoader.cpp">
       <Filter>Graphics</Filter>
     </ClCompile>
     <ClCompile Include="src\Graphics\Shader.cpp">
@@ -89,25 +99,12 @@
     <ClCompile Include="src\Graphics\VertexArrayObject.cpp">
       <Filter>Graphics</Filter>
     </ClCompile>
-    <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\Graphics\ObjLoader.cpp">
-      <Filter>Utilities</Filter>
-    </ClCompile>
     <ClCompile Include="src\Graphics\VertexTypes.cpp">
-      <Filter>Utilities</Filter>
+      <Filter>Graphics</Filter>
     </ClCompile>
     <ClCompile Include="src\Player.cpp" />
-    <ClCompile Include="src\Enemy.cpp" />
-    <ClCompile Include="src\Graphics\ITexture.cpp" />
-    <ClCompile Include="src\Bullet.cpp" />
-    <ClCompile Include="src\stuff.cpp" />
     <ClCompile Include="src\UI.cpp" />
-    <ClCompile Include="src\AudioEngine.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="fmod.dll" />
-    <None Include="fmodL.dll" />
-    <None Include="fmodstudio.dll" />
-    <None Include="fmodstudioL.dll" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\stuff.cpp" />
   </ItemGroup>
 </Project>
