--- a/projects/tester/tester.vcxproj
+++ b/projects/tester/tester.vcxproj
@@ -46,6 +46,8 @@
     <IntDir>..\..\obj\Debug-windows-x86_64\tester\</IntDir>
     <TargetName>tester</TargetName>
     <TargetExt>.exe</TargetExt>
+    <IncludePath>$(SolutionDir)inc;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\Users\hotbu\Documents\Github Repository\GDW Y2S2 New\Y2T2_Bloody-Melon\dependencies\fmod\lib;$(SolutionDir)lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -53,13 +55,15 @@
     <IntDir>..\..\obj\Release-windows-x86_64\tester\</IntDir>
     <TargetName>tester</TargetName>
     <TargetExt>.exe</TargetExt>
+    <IncludePath>$(SolutionDir)inc;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\Users\hotbu\Documents\Github Repository\GDW Y2S2 New\Y2T2_Bloody-Melon\dependencies\fmod\lib;$(SolutionDir)lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;GLFW_INCLUDE_NONE;WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;..\..\dependencies\glfw3\include;..\..\dependencies\glad\include;..\..\dependencies\imgui;..\..\dependencies\GLM\include;..\..\dependencies\stbs;..\..\dependencies\fmod\include;..\..\dependencies\spdlog\include;..\..\dependencies\entt;..\..\dependencies\cereal;..\..\dependencies\gzip;..\..\dependencies\tinyGLTF;..\..\dependencies\json;..\..\dependencies\bullet3\include;..\..\modules\NOU\include;..\..\modules\sampleModule\include;..\..\modules\toolkit\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;..\..\dependencies\glfw3\include;..\..\dependencies\glad\include;..\..\dependencies\imgui;..\..\dependencies\GLM\include;..\..\dependencies\stbs;..\..\dependencies\fmod\include;..\..\dependencies\spdlog\include;..\..\dependencies\entt;..\..\dependencies\cereal;..\..\dependencies\gzip;..\..\dependencies\tinyGLTF;..\..\dependencies\json;..\..\dependencies\bullet3\include;..\..\modules\FMODStudio\include;..\..\modules\NOU\include;..\..\modules\sampleModule\include;..\..\modules\toolkit\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -69,7 +73,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opengl32.lib;imagehlp.lib;..\..\dependencies\gzip\zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>fmodstudioL_vc.lib; fmodL_vc.lib;opengl32.lib;imagehlp.lib;..\..\dependencies\gzip\zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>(xcopy /Q /E /Y /I /C "$(SolutionDir)shared_assets\dll" "$(SolutionDir)bin\Debug-windows-x86_64\$(ProjectName)")
@@ -84,7 +88,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;GLFW_INCLUDE_NONE;WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;..\..\dependencies\glfw3\include;..\..\dependencies\glad\include;..\..\dependencies\imgui;..\..\dependencies\GLM\include;..\..\dependencies\stbs;..\..\dependencies\fmod\include;..\..\dependencies\spdlog\include;..\..\dependencies\entt;..\..\dependencies\cereal;..\..\dependencies\gzip;..\..\dependencies\tinyGLTF;..\..\dependencies\json;..\..\dependencies\bullet3\include;..\..\modules\NOU\include;..\..\modules\sampleModule\include;..\..\modules\toolkit\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;..\..\dependencies\glfw3\include;..\..\dependencies\glad\include;..\..\dependencies\imgui;..\..\dependencies\GLM\include;..\..\dependencies\stbs;..\..\dependencies\fmod\include;..\..\dependencies\spdlog\include;..\..\dependencies\entt;..\..\dependencies\cereal;..\..\dependencies\gzip;..\..\dependencies\tinyGLTF;..\..\dependencies\json;..\..\dependencies\bullet3\include;..\..\modules\FMODStudio\include;..\..\modules\NOU\include;..\..\modules\sampleModule\include;..\..\modules\toolkit\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -98,7 +102,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opengl32.lib;imagehlp.lib;..\..\dependencies\gzip\zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>fmodstudio_vc.lib; fmod_vc.lib;opengl32.lib;imagehlp.lib;..\..\dependencies\gzip\zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>(xcopy /Q /E /Y /I /C "$(SolutionDir)shared_assets\dll" "$(SolutionDir)bin\Release-windows-x86_64\$(ProjectName)")
@@ -128,6 +132,7 @@
     <ClInclude Include="src\Graphics\VertexBuffer.h" />
     <ClInclude Include="src\Graphics\VertexTypes.h" />
     <ClInclude Include="src\HitCheck.h" />
+    <ClInclude Include="src\ObjClass.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\UI.h" />
     <ClInclude Include="src\entt\entt.hpp" />
@@ -147,6 +152,7 @@
     <ClCompile Include="src\Graphics\Texture2DData.cpp" />
     <ClCompile Include="src\Graphics\VertexArrayObject.cpp" />
     <ClCompile Include="src\Graphics\VertexTypes.cpp" />
+    <ClCompile Include="src\ObjClass.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\UI.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -167,6 +173,9 @@
     </ProjectReference>
     <ProjectReference Include="..\..\dependencies\tinyGLTF\TinyGLTF.vcxproj">
       <Project>{76563D9D-6223-98A8-8B3C-86507768CD36}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\modules\FMODStudio\FMODStudio.vcxproj">
+      <Project>{A386D97E-8F3E-1BCC-F845-F427E41CB6BC}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\modules\NOU\NOU.vcxproj">
       <Project>{3709880B-A312-887C-2C8E-9E7C9896937C}</Project>
